<resources>
    <string name="app_name">Team_4</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="enter_confirm_password">Enter Confirmation Password!</string>
    <string name="enter_mobile">Enter a Mobile Number!</string>
    <string name="enter_name">Enter your Name!</string>
    <string name="minimum_mobile">Enter a 10 digit mobile number!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="password_dont_match">Passwords don\'t match, please enter again!</string>
    <string name="auth_failed">Authentication failed, check your email and password!</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_new_password">New Password</string>
    <string name="profile_confirm">Confirm!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="logo">Logo</string>

    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="account">Account</string>
    <string name="account_statement">Account Statement</string>
    <string name="transaction_history">Transaction History</string>
    <string name="transfer_funds">Transfer Funds</string>

    <string name="register_already_login">Already Have an Account? Sign In</string>
    <string name="register_btn_register">Register</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="btn_sign_up">Don\'t have an account? Sign Up</string>
    <string name="chatbot">Chatbot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_faq">Bank FAQ</string>
    <string name="frag_account_balance">Balance:</string>
    <string name="team_4">Team 4</string>
    <string name="frag_fund_transfer_phone">Phone Number</string>
    <string name="frag_fund_transfer_amount">Amount</string>
    <string name="frag_fund_transfer_description">Description</string>
    <string name="frag_fund_transfer_btn_transfer">Transfer</string>
    <string name="frag_statement_from_date">From Date (yyyy-mm-dd)</string>
    <string name="frag_statement_to_date">To Date (yyyy-mm-dd)</string>
    <string name="frag_statement_go">Go</string>
    <string name="card_transaction_name">Name:</string>
    <string name="card_transaction_account">Account:</string>
    <string name="card_transaction_amount">Amount:</string>
    <string name="card_transaction_type">Type:</string>
    <string name="card_transaction_description">Description:</string>
</resources>
