<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/cardname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="@string/card_transaction_name" />

            <TextView
                android:id="@+id/cardphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:elevation="10dp"
                android:text="@string/card_transaction_account" />

            <TextView
                android:id="@+id/cardamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:elevation="10dp"
                android:text="@string/card_transaction_amount" />

            <TextView
                android:id="@+id/cardtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:elevation="10dp"
                android:text="@string/card_transaction_type" />

            <TextView
                android:id="@+id/carddescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:elevation="10dp"
                android:text="@string/card_transaction_description" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
