<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary">
    <EditText
        android:id="@+id/fromDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/frag_statement_from_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/toDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/frag_statement_to_date"
        android:inputType="date" />

    <Button
        android:id="@+id/statbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/frag_statement_go" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recylcerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp" />

</LinearLayout>